# stm32h747i-xash3d

./: LICENSE  README.md
BSP/CM7/Inc/: main.h  stm32h747i_discovery_conf.h  stm32h7xx_hal_conf.h
BSP/CM7/Src/: audio_play.c  audio_record.c  joystick.c  main.c  qspi.c  stm32h7xx_it.c  touchscreen.c
BSP/STM32CubeIDE/: .project
BSP/STM32CubeIDE/CM7/: .cproject  .project  Attach.launch  BSP_CM7 Debug.launch  STM32H747XIHX_FLASH.ld
BSP/STM32CubeIDE/CM7/Debug/: makefile  objects.list  objects.mk  sources.mk
BSP/STM32CubeIDE/CM7/Debug/Drivers/BSP/STM32H747I-DISCO/: stm32h747i_discovery.cyclo  subdir.mk  (+26 more)
BSP/STM32CubeIDE/CM7/Debug/Drivers/CMSIS/: subdir.mk  system_stm32h7xx.cyclo  system_stm32h7xx.d  system_stm32h7xx.su
BSP/STM32CubeIDE/CM7/Debug/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_cdc_if.cyclo  usbd_cdc_if.d  usbd_cdc_if.su  usbd_desc.cyclo  usbd_desc.d  usbd_desc.su
BSP/STM32CubeIDE/CM7/Debug/Utilities/: stm32_lcd.cyclo  stm32_lcd.d  stm32_lcd.su  subdir.mk
BSP/STM32CubeIDE/CM7/Drivers/BSP/STM32H747I-DISCO/: stm32h747i_discovery.c  stm32h747i_discovery_lcd.c  stm32h747i_discovery_qspi.c  stm32h747i_discovery_sd.c
BSP/STM32CubeIDE/CM7/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_uart.c
BSP/STM32CubeIDE/CM7/Example/User/CM7/: bckg.c  doom_stm32_audio_loop.c  doomgeneric_stm32.c  img_data.c  syscalls.c  sysmem.c
BSP/STM32CubeIDE/CM7/Example/User/Startup/: startup_stm32h747xihx.s
BSP/STM32CubeIDE/CM7/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
STMDoomComNetwork/: CMakeLists.txt  main.cpp
STMDoomComNetwork/libserialport/: serialport.c
(+2150 files in other folders)
